# FVM_mesh

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  create_sample_mesh.py  mesh.py  pyproject.toml  readme.md  requirements.txt
.claude/: settings.local.json
cmake/: FVM_MeshConfig.cmake.in  FindGmsh.cmake  FindMETIS.cmake  generate_msvc_lib.bat
common/: utility.py
data/: sample_mixed_mesh.msh  sample_rect_mesh.msh
meshgen/: __init__.py  geometry.py  mesh_generator.py
polymesh/: __init__.py  core_mesh.py  distributed_mesh.py  local_mesh.py  mesh.py  partition.py  poly_mesh.py  polymesh.py  quality.py  reorder.py
src/: CMakeLists.txt  __init__.py  create_geometry_2d.py  create_mesh_2d.py  gen_mesh_2d.py  geometry.cpp  geometry.hpp  geometry.py  helpers.py  local_mesh.py  main.cpp  mesh.py  mesh_analysis.py  mesh_generator.cpp  mesh_generator.hpp  mesh_generator.py  mesh_partition.py  mesh_partition_manager.cpp  mesh_quality.cpp  mesh_quality.hpp  mesh_types.hpp  partition.py  poly_mesh.cpp  reorder.py  utility.py  vtk_writer.hpp
src/common/: utility.py
src/fvm_mesh/: __init__.py
src/fvm_mesh/meshgen/: geometry.py  mesh_generator.py
src/fvm_mesh/polymesh/: __init__.py  core_mesh.py  local_mesh.py  mesh_partition_manager.py  partition.py  poly_mesh.py  quality.py  reorder.py  reporting.py
src/mesh_generation/: CMakeLists.txt  geometry.hpp  mesh_generation_export.hpp  mesh_generator.hpp  mesh_types.hpp
src/mesh_processing/: CMakeLists.txt  local_mesh.cpp  local_mesh.hpp  mesh_partition_manager.hpp  mesh_processing_export.hpp  mesh_quality.hpp  partition.hpp  poly_mesh.hpp  reorder.cpp  reorder.hpp  vtk_writer.hpp
src/meshgen/: CMakeLists.txt  geometry.hpp  mesh_generator.hpp  mesh_types.hpp
src/polymesh/: CMakeLists.txt  local_mesh.hpp  mesh_partition_manager.hpp  mesh_quality.hpp  partition.cpp  partition.hpp  partition.py  poly_mesh.hpp  reorder.hpp  reorder.py  vtk_writer.cpp  vtk_writer.hpp
tests/: common_meshes.py  test_core_mesh.py  test_create_geometry.py  test_create_geometry_2d.py  test_create_mesh.py  test_gen_mesh_2d.py  test_geometry.py  test_geometry_2d.py  test_helpers.py  test_local_mesh.py  test_mesh.py  test_mesh_analysis.py  test_mesh_generator.py  test_mesh_partition.py  test_mesh_partition_manager.py  test_partition.py  test_polygon_mesh.py  test_polymesh.py  test_reorder.py  test_utility.py  test_workflow.py
trunk/: polygon_triangular.msh
utility/: gmsh_create_rect_partition_mesh.py  mesh.py  mesh_v2.py
