[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fvm_mesh"
version = "3.0.0"
authors = [
  { name="Eric Zhang", email="buaa.zhanghui@gmail.com" },
]
description = "A package for mesh generation and analysis based on gmsh for finite volume methods."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools]
package-data = { "fvm_mesh" = ["dll/metis.dll"] }

[tool.setuptools.packages.find]
where = ["src"]
